SQL Server Connection Server Name

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefautSQLConnection": "Server=.;Database=Magic_VillaAPI;Connection=True;MultipleActiveResultSets=true"
+  }
 }
