Create Villa Table

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefautSQLConnection": "Server=.;Database=Magic_VillaAPI;Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=.;Database=MagicVilla_VillaAPI;TrustServerCertificate=True;MultipleActiveResultSets=true"
+
   }
+  
 }
