sa database update

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=.;Database=MagicVilla_VillaAPI;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
 
   }
   
