Add API URL in AppSettings

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -6,9 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
-
+  //"ConnectionStrings": {
+    //"DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  "ServiceUrls": {
+    "VillaAPI": "http://localhost:7001"
+  }
   }
   
 }
