--- a/MagicVilla_Web/appsettings.json
+++ b/MagicVilla_Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServicesUrl": {
+    "VillaAPI": "https://localhost:7002"
+  }
 }
