Disable NULLABLE - IMPORTANT

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -6,11 +6,12 @@
     }
   },
     "AllowedHosts": "*",
-    //"ConnectionStrings": {
-      //"DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
-    "ServiceUrls": {
-      "VillaAPI": "http://localhost:7001"
-    }
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
+        //"ServiceUrls": {
+    //  "VillaAPI": "http://localhost:7001"
+    //}
   
   
 }
