Move Images + error correction

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "server=.;Database=MagicVilla_VillaAPI;User Id=sa;Password=general;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "server=DESKTOP-3TS84CE;Database=MagicVilla_VillaAPI;User Id=user1;Password=sa;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
         "ServiceUrls": {
       "VillaAPI": "http://localhost:7001"
