Implement User Repository - Login Part 1

--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -5,13 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "server=DESKTOP-3TS84CE;Database=MagicVilla_VillaAPI;User Id=user1;Password=sa;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
-        "ServiceUrls": {
-      "VillaAPI": "http://localhost:7001"
-        }
-  
-  
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
+  }
 }
+
